# test_pull_request

./: .gitattributes  Makefile.am  PVS-Studio.lic  configure.ac  g.c  main.c  makefile
.github/workflows/: github-ci.yml  main.yml  pr.yml  pull_request.yml  test.yml
